Ajuste no calculo do valor da hora, e utilizando o valor no form de perfil

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,9 +35,9 @@
             Você tem 2 horas livres no seu dia
           </span>
           <a href="/profile" id="avatar-profile">
-            <p>Jakeliny <span>Ver perfil</span></p>
+            <p><%= profile.name %><span>Ver perfil</span></p>
             <img
-              src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4"
+              src="<%= profile.avatar %> "
             />
           </a>
         </section>
@@ -104,7 +104,7 @@
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
               <a 
-                href="/job/edit" 
+                href="/job/<%= job.id %>" 
                 class="button white edit" 
                 title="Editar Job">
                 <img src="/images/edit-24.svg" alt="Editar Job" />
