--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -31,7 +31,7 @@
     <%- include("parts/page-header", { title: "Editar Job" })  %>
 
     <div class="container flex animate-up delay-2">
-        <form id="form-job">
+        <form id="form-job" method="post" action="/job/<%= job.id %>">
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
