Incluindo método de deletar job

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,7 +49,7 @@
 
           <div class="info">
             <div class="total">
-              <strong>12</strong>
+              <strong><%= jobs.length %></strong>
               Projetos ao total
             </div>
             <div class="in-progress">
@@ -130,7 +130,7 @@
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
         Ele será apagado para sempre.  
-        <p>
+        </p>
         <footer>
           <a 
             class="button gray" 
